--- a/css/grid_normVersion.css
+++ b/css/grid_normVersion.css
@@ -273,7 +273,6 @@ input[name = "Ask-button"]{
 
                                                         /* section map */
 .map{
-    margin-bottom: 81px;
     max-width: 1290px;
     margin: 0 auto;
 }
@@ -283,6 +282,7 @@ input[name = "Ask-button"]{
                                                        /* section cities */
 
 .cities {
+    margin-top: 60px;
     margin-bottom: 100px;
     width: 100%;
     padding: 25px;
@@ -610,9 +610,6 @@ input[name = "Ask-button"]{
 
                                                         /* header (media)  */
 
-    /* .header-article1-item:last-child{
-        display:none;
-    } */
     
     .header-article1{
         width: 268px;
@@ -1161,6 +1158,14 @@ input[name = "Ask-button"]{
         margin: 0;
     }
 
+    .footer-righ address{
+        margin-bottom: 40px !important
+    }
+
+    .footer-right{
+        height: 320px !important
+    }
+
     .footer-right-top{
         margin: 0 auto 15px auto;
     }
@@ -1175,7 +1180,7 @@ input[name = "Ask-button"]{
     .footer-right address{
         width: 290px;
         height: 80px;
-        margin: 0 auto 58.660px auto;
+        margin: 0 auto 20px auto;
         position: relative;
         left: 35px;
     }
@@ -1319,7 +1324,7 @@ input[name = "Ask-button"]{
     .footer-right address{
         width: 240px;
         height: 80px;
-        margin: 0 auto 58.660px auto;
+        margin: 0 auto 30px auto;
         position: relative;
         left: 15px;
     }
